[project]
name = "comfyui-simply-nodes"
description = "Simple nodes to help clean up your workflow, mostly focussed on text operations."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Wicloz/ComfyUI-Simply-Nodes"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "wicloz"
DisplayName = "ComfyUI-Simply-Nodes"
Icon = ""
