[project]
name = "comfyui-simply-nodes"
description = "Simple nodes to help clean up your workflow, mostly focussed on text operations."
version = "1.1.0"

[project.urls]
Repository = "https://github.com/Wicloz/ComfyUI-Simply-Nodes"

[tool.comfy]
# Used by Comfy Registry https://registry.comfy.org/
PublisherId = "wicloz"
DisplayName = "ComfyUI Simply Nodes"
Icon = ""
